completed main page

--- a/resume.html
+++ b/resume.html
@@ -1,20 +1,55 @@
 <!DOCTYPE html>
 <html>
-     <!-- Heading  -->
+     <!-- Setting up of the File  -->
      <head>
       <title>Sukya's Resume</title>
       <link rel = "stylesheet" type = "text/css" href="/Stylesheets/resumeSheet.css">
      </head>
-     <header>
-      <img src = "/Assets/headerbackground.png" height = 500px > 
-      
-     </header>
+     
+     <body>
      <!-- Body Section with Sidebar and Intro Section -->
-     <body> 
+          <div id = "sideBar"> 
+               <a href = "/resume.html"> Home </a>
+               <a href = "/education.html"> Education </a>
+               <a href = "/experiences.html"> Experiences </a>
+               <a href = "/volunteer.html "> Volunteer</a>
+               <a href = "/contact.html"> Contact </a>
+          </div>
+          <!-- Header Image -->
+          <div>
+               <img id = "image" src = "Assets/headerbackground.png">
+          </div>
+          <!-- Body -->
+          <div>
+               <h3> Hello there!</h3>
+               <p> 
+                    My name is Sukya. I am a junior studying Cognitive Science 
+                    and Computer Science at the University of Pennsylvania. I currently 
+                    am the Head Teaching Assistant for CIS 1100, Introduction to 
+                    Computer Programming. I am also a Research Technician in the Betley 
+                    laboratory, focused on investigating the role of various neural networks
+                    on hunger. Lastly, I am an advising fellow with Matriculate, a non-profit, focused 
+                    on assisting low income students with the college application process. 
+               <br> 
+               <br>
+                    I actively searching for software engineering internships for the summer 2024 and 
+                    professional development opportunities. 
+                    <br> 
+                    <br>
+                    Please take a look at some of my projects and exeriences and peruse my resume. Thank you!
+               </p>
 
+          </div>
      </body>
      <!-- Footer -->
      <footer>
-
+          <h5>CONTANT ME HERE:</h5>
+          <!-- Add icon library -->
+          <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+          <!-- Add and link the accounts I want to use  -->
+          <a href="https://www.linkedin.com/in/sukya/" target = "_blank" class = "fa fa-linkedin"></a>
+          <a href="mailto: williamssukya@gmail.com" target = "_blank" class="fa fa-google"></a>
+          <a href="mailto: williamssukya@yahoo.com" target = "_blank" class = "fa fa-yahoo"></a>
+          <a href="https://github.com/Sukya1" target = "_blank" class = "fa fa-github"></a>
      </footer>
 </html>
