updated main and other page

--- a/contact.html
+++ b/contact.html
@@ -13,9 +13,9 @@
      <body> 
           <div id = "sideBar"> 
                <a href = "/resume.html"> Home </a>
-               <a href = "/education.html"> Education </a>
-               <a href = "/experiences.html"> Experiences </a>
-               <a href = "/volunteer.html "> Volunteer</a>
+               <a href = "/otherPages.html"> Education </a>
+               <a href = "/otherPages.html"> Experiences </a>
+               <a href = "/otherPages.html"> Volunteer</a>
                <a href = "/contact.html"> Contact </a>
           </div>
 
