--- a/resume.html
+++ b/resume.html
@@ -10,9 +10,9 @@
      <!-- Body Section with Sidebar and Intro Section -->
           <div id = "sideBar"> 
                <a href = "/resume.html"> Home </a>
-               <a href = "/education.html"> Education </a>
-               <a href = "/experiences.html"> Experiences </a>
-               <a href = "/volunteer.html "> Volunteer</a>
+               <a href = "/otherPages.html#Education"> Education </a>
+               <a href = "/otherPages.html#Experience"> Experiences </a>
+               <a href = "/otherPages.html#volunteer"> Volunteer</a>
                <a href = "/contact.html"> Contact </a>
           </div>
           <!-- Header Image -->
@@ -22,7 +22,7 @@
           <!-- Body -->
           <div>
                <h3> Hello there!</h3>
-               <p> 
+               <p id = "homeParagraph"> 
                     My name is Sukya. I am a junior studying Cognitive Science 
                     and Computer Science at the University of Pennsylvania. I currently 
                     am the Head Teaching Assistant for CIS 1100, Introduction to 
