all pages completed

--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,50 @@
                <a href = "/otherPages.html"> Volunteer</a>
                <a href = "/contact.html"> Contact </a>
           </div>
+          <h1 id = "contactPageHeading">CONTACT ME!</h1>
+          <p id="headerParagraph"> Feel free to contact me with any professional development, internship or networking opportunities. <br>
+               If you believe I can add value to a non-profit organization that you are apart of, please let me know. 
+          </p>
+     <section id = form>
+          <form>
+               <label for = "firstName"> First Name: </label>
+               <input type="text" name = "firstName" placeholder = "eg. John"> 
+               <label for = "lastName"> Last Name: </label>
+               <input type="text" name = "lastName" placeholder = "eg. Doe"> 
+          </form>
+          <br>
+          <br>
+          <form>
+               <label for = "Email"> E-mail Address: </label>
+               <input type="text" name = "email" placeholder = "eg. johndoe@gmail.com"> 
+          </form>
+               <br> 
+               <form>
+               <p>Which of the following applies to you: </p>
+               <div>
+               <input type = "checkbox" name = "checkbox">
+               <label for = "checkbox"> Recruiter </label>
+               <br>
+               <br>
+               <input type = "checkbox" name = "checkboxStudent">
+               <label for = "checkboxStudent"> Student </label>
+               <br> 
+               <br> 
+               <input type = "checkbox" name = "checkboxOther">
+               <label for = "checkboxOther"> Other </label>
+               <br> 
+               <br>
+               <label for="message"> Message:</label>
+               <br>
+               <br>
+               <textarea id = "message" name = "textarea" cols = "40" rows = "7" placeholder="Hi Sukya, I would like to 
+               connect with you!"></textarea>
+          </form>
+          <form id = "submitButton"> 
+               <input id = "button" type = "Submit" vlaue = "Sunbmit">
+          </form>
 
+     </section>
      </body>
      <!-- Footer -->
      <footer>
