fixed spelling error on home page

--- a/resume.html
+++ b/resume.html
@@ -36,7 +36,7 @@
                     professional development opportunities. 
                     <br> 
                     <br>
-                    Please take a look at some of my projects and exeriences and peruse my resume. Thank you!
+                    Please take a look at some of my projects and experiences and peruse my resume. Thank you!
                </p>
 
           </div>
